--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
     {
       "matches": ["<all_urls>"],
       "css": ["sidebar.css"],
-      "js": ["highlight.js", "sidebar.js", "content.js", "search.js"],
+      "js": ["highlight.js", "sidebar.js", "content.js", "search.js", "youtube-content.js"],
       "run_at": "document_end"
     }
   ],
